# mbox_converter

./: .readthedocs.yaml  .readthedocs.yml  ABOUT_THIS_TEMPLATE.md  Containerfile  DnD_mbox_converter.bat  DnD_mbox_converter.sh  FUNDING.yml  HISTORY.md  MANIFEST.in  Makefile  README.md  config.yaml  example.mbox  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  run_drag_and_drop.bat  run_drag_and_drop.sh  setup.cfg  setup.py
.github/: FUNDING.yml  rename_project.sh
.github/actions/setup-environment/: action.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: build-macos.yml  build.yml  main.yml  release.yml  update-readme.yml
docs/: conf.py  contributing.md  index.md  install.md  make.bat  usage.md
docs/Getting Started/: install.md
docs/contributing/: contributing.md  index.md  make_windows.md
docs/source/: conf.py  contributing.md  index.md
docs/source/_static/: custom.css
docs/usage/: cli.md  cli_api_doc.md  usage.md
mbox_converter/: __main__.py  base.py  cli.py  config.py  gui.py  parameters.py
scripts/: update_readme.py
tests/: test_base.py  test_cli.py
