[project]
name = "mbox_converter"
version = "0.1.0"
description = "A tool to convert Gmail .mbox files into CSV format."
authors = [
    {name = "pamagister"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "beautifulsoup4 ==4.13.4",
    "email-reply-parser ==0.5.12",
    "soupsieve ==2.0.1",
    "unicodecsv ==0.14.1",
    "python-dotenv ==0.14.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mbox_converter = "mbox_converter.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"
coverage = "^7.8.2"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"
mypy = "^1.16.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.1"
pyinstaller ="^5.8"
uv ="^0.7.12"

