[project]
name = "mbox_converter"
version = "0.1.13"
description = "A tool to convert Gmail .mbox files into CSV or TXT format."
authors = [
    {name = "pamagister"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "beautifulsoup4 ==4.13.4",
    "dotenv>=0.9.9",
    "email-reply-parser ==0.5.12",
]

# Dev dependencies as optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "coverage>=7.8.2",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest-cov>=6.1.1",
    "mypy>=1.16.0",
    "gitchangelog>=3.0.4",
    "pyinstaller>=5.8",
    "pre-commit>=4.2.0",
]

docs = [
    "mkdocs>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
mbox_converter = "mbox_converter.cli:main"
mbox_gui = "mbox_converter.gui:run_gui"

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "docs"]

